Project 1/force-app/main/default/objects/Mail__c/fields/Dummy__c.field-meta.xml
<CustomField>
    <fullName>Dummy__c</fullName>
    <label>Dummy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>