Project 1/force-app/main/default/objects/Mail__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <displayFormat>TN-{0000}</displayFormat>
    <label>Tracking Number</label>
    <type>AutoNumber</type>
</CustomField>