Project 1/force-app/main/default/objects/Mail__c/recordTypes/Package.recordType-meta.xml
<RecordType>
    <fullName>Package</fullName>
    <active>true</active>
    <label>Package</label>
</RecordType>