Project 1/force-app/main/default/objects/Mail__c/listViews/Missing.listView-meta.xml
<ListView>
    <fullName>Missing</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Missing</value>
    </filters>
    <label>Missing</label>
</ListView>