Project 1/force-app/main/default/objects/Mail__c/listViews/Processing.listView-meta.xml
<ListView>
    <fullName>Processing</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Delivery_Status__c</field>
        <operation>equals</operation>
        <value>Processing</value>
    </filters>
    <label>Processing</label>
</ListView>